# dove

./: '  .gitignore  CMakeLists.txt  \  ]  build.sh  main.c  temp.txt  test.sh  todo.txt
assets/shaders/: SkyVertexShader.vertexshader  SkyboxFragmentShader.fragmentshader  TransformVertexShader.vertexshader
core/: CMakeLists.txt  math.hpp  node.hpp  thing.hpp
core/component/: component.hpp  updatableComponent.cpp
core/math/: func_common.cpp  func_common.hpp  mat4x4.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp  quaternion.hpp  vec3.hpp  vector2.hpp  vector3.hpp  vector4.hpp
core/thingy/: thingy.cpp  thingy.hpp
dreams/glyphs/: build.sh
gaia/: CMakeLists.txt  build.sh
gaia/lib/: controls.cpp  shaderLoader.cpp  threadsafe_vector.hpp
gaia/src/: ColorFragmentShader.fragmentshader  TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  reality  reality.cpp
gaia/src/components/: boxColliderComponent.hpp  component.hpp  meshRendererComponent.cpp  meshRendererComponent.hpp  physicsComponent.cpp  physicsComponent.hpp  playerControllerComponent.hpp  rigidBodyComponent.hpp  spriteRendererComponent.hpp
gaia/src/dasset/: dmesh.hpp  dtexture.cpp  dtexture.hpp  shader.cpp  texture.cpp
gaia/src/dmesh/: dmesh.hpp
gaia/src/dthing/: dthing.cpp  dthing.hpp
gaia/src/dthing/components/: component.hpp  gaiaComponent.cpp  gaiaComponent.hpp  meshRendererComponent.cpp  meshRendererComponent.hpp  transformComponent.cpp  transformComponent.hpp
gaia/src/rendering/: dmeshRenderer.cpp  dmeshRenderer.hpp  openGLRenderer.cpp  openGLRenderer.hpp  shader.cpp
gaia/src/thingy/: thingy.cpp  thingy.hpp
gaia/src/thingy/components/: boxColliderComponent.cpp  boxColliderComponent.hpp  colliderComponent.cpp  colliderComponent.hpp  component.cpp  component.hpp  components.hpp  dynamicComponent.cpp  dynamicComponent.hpp  gaiaComponent.cpp  gaiaComponent.hpp  meshRendererComponent.cpp  meshRendererComponent.hpp  physicsComponent.cpp  physicsComponent.hpp  playerControllerComponent.hpp  rigidBodyComponent.cpp  rigidBodyComponent.hpp  spriteRendererComponent.hpp  transformComponent.cpp  transformComponent.hpp
gaia/src/worldgen/: doctree.cpp  doctree.hpp
lib/: assetImporter.hpp  bulletDebugDrawer.hpp  controls.cpp  controls.hpp  libraryLoader.cpp  libraryLoader.hpp  setup.cpp  setup.hpp  shaderLoader.cpp  shaderLoader.hpp  texture.hpp
modules/: CMakeLists.txt
modules/3d/: CMakeLists.txt  transformComponent.cpp  transformComponent.hpp
modules/asset/: CMakeLists.txt  asset.cpp  asset.hpp  material.cpp  material.hpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
modules/camera/: CMakeLists.txt  cameraComponent.cpp  cameraComponent.hpp
modules/command/: command.hpp  commander.hpp
modules/core/: CMakeLists.txt  node.cpp  node.hpp  rtti_macros.hpp  thing.cpp  thing.hpp
modules/core/component/: component.cpp  updatableComponent.hpp
modules/core/thingy/: thingy.hpp
modules/dove/: expressionComponent.hpp  playerControllerComponent.cpp  playerControllerComponent.hpp
modules/event/: event.hpp  momento.cpp  momento.hpp
modules/file/: fileThingy.hpp
modules/gaia/: CMakeLists.txt  doctree.cpp  doctree.hpp  gaiaComponent.hpp  octree.cpp  octree.hpp
modules/game/: CMakeLists.txt  playerControllerComponent.cpp  playerControllerComponent.hpp
modules/glyph/: CMakeLists.txt  glyphThingy.cpp  glyphThingy.hpp
modules/link/: CMakeLists.txt  link.cpp  link.hpp
modules/networking/: connectorComponent.hpp
modules/panel/: CMakeLists.txt  panelThingy.cpp  panelThingy.hpp
modules/physics/: CMakeLists.txt  boxColliderComponent.cpp  boxColliderComponent.hpp  colliderComponent.cpp  colliderComponent.hpp  physicsComponent.cpp  physicsComponent.hpp  rigidBodyComponent.cpp  rigidBodyComponent.hpp
modules/rendering/: CMakeLists.txt  cameraComponent.cpp  cameraComponent.hpp  meshRendererComponent.cpp  meshRendererComponent.hpp  modelRendererComponent.cpp  modelRendererComponent.hpp  opengl.cpp  skyRendererComponent.cpp  skyRendererComponent.hpp  spriteRendererComponent.hpp
modules/test/: CMakeLists.txt  test.cpp
modules/transform/: CMakeLists.txt  transformComponent.cpp  transformComponent.hpp
modules/window/: CMakeLists.txt  window.cpp  window.hpp
preserved/: a.out
preserved/gaia/: CMakeLists.txt
preserved/gaia/lib/: controls.cpp
preserved/gaia/src/: TextureFragmentShader.fragmentshader  reality  reality.cpp
preserved/gaia/src/dasset/: dtexture.cpp  shader.hpp
preserved/gaia/src/rendering/: dmeshRenderer.hpp  openGLRenderer.cpp
preserved/gaia/src/thingy/: thingy.hpp
preserved/gaia/src/thingy/components/: component.cpp  meshRendererComponent.cpp  physicsComponent.cpp  physicsComponent.hpp  rigidBodyComponent.cpp  rigidBodyComponent.hpp  sphereColliderComponent.cpp  sphereColliderComponent.hpp  spriteRendererComponent.cpp
reality/: CMakeLists.txt  build.sh  reality.cpp  todo.txt
reality/common/: controls.cpp  shader.cpp
reality/lib/: setup.hpp
reality/src/: ColorFragmentShader.fragmentshader  TransformVertexShader.vertexshader  reality  reality.cpp
source/gaia/: reality  reality.cpp
src/: ColorFragmentShader.fragmentshader  SkyVertexShader.vertexshader  SkyboxFragmentShader.fragmentshader  TransformVertexShader.vertexshader  defaultAssets.cpp  defaultAssets.hpp  dove  dove.cpp  reality  reality.cpp  reality.orig  test_dove.hpp  universe.dove  universe.metadata
src/command/: command.cpp  command.hpp  commander.hpp  createCommand.hpp
src/components/: boxColliderComponent.hpp  cameraComponent.cpp  cameraComponent.hpp  colliderComponent.hpp  component.cpp  component.hpp  expressionComponent.hpp  gaiaComponent.hpp  meshRendererComponent.cpp  meshRendererComponent.hpp  objectRendererComponent.cpp  objectRendererComponent.hpp  physicsComponent.cpp  physicsComponent.hpp  playerControllerComponent.cpp  playerControllerComponent.hpp  rigidBodyComponent.hpp  skyRendererComponent.cpp  skyRendererComponent.hpp  sphereColliderComponent.hpp  spriteRendererComponent.hpp  transformComponent.cpp  transformComponent.hpp  updatableComponent.cpp  (+1 more)
(+51 files in other folders)
