
# symbol visibility
# set(CMAKE_CXX_VISIBILITY_PRESET default)
# set(CMAKE_VISIBILITY_INLINES_HIDDEN OFF)

add_subdirectory(transform)
add_subdirectory(glyph)
add_subdirectory(asset)
add_subdirectory(panel)
add_subdirectory(window)
add_subdirectory(rendering)
add_subdirectory(camera)
add_subdirectory(physics)
add_subdirectory(game)
add_subdirectory(link)
# add_subdirectory(gaia)
